<resources>
    <string name="app_name">Haj_GHasem</string>
    <string name="menu">فهرست</string>
    <string name="introduction">مقدمه</string>
    <string name="paragraph1">اشهد أن لا اله الا الله و اشهد أنّ محمداً رسول الله و اشهد أنّ امیرالمؤمنین علی‌بن ابی‌طالب و اولاده المعصومین اثنی‌عشر ائمّتنا و معصومیننا حجج الله. \nشهادت می‌دهم که قیامت حق است، قرآن حق است، بهشت و جهنّم حق است، سؤال و جواب حق است، معاد، عدل، امامت، نبوت حق است</string>
    <string name="part2">عمر ما می گذرد... تمام میشه ... به سرعت هم تمام میشه... \nچه اینجا باشی چه تو خونه باشیم ، هرکجا که باشی ... \nبهترین جا رو داشته باشی ، توی بهترین هتل زندگی کنی همه میمیریم . رییس جمهور عالم باشیم ، میمیریم ... \nاما... انتخاب راه درست خیلی مهم است.</string>
    <string name="Tramp">حاج قاسم سلیمانی خطاب به ترامپ : این جنگ را شما شروع می کنید اما پایانش را ما ترسیم می کنیم. بدانید اشهدبالله هیچ شبی نیست ما نخوابیم و به شما فکر نکنیم. به شما می‌گویم آقای ترامپ قمارباز! من به شما می‌گویم! بدان در آن جایی که فکر نمی‌کنی، ما نزدیک شما هستیم.</string>
    <string name="baradar_ali">نامه حاج قاسم به بردادرش علی : علی عزیز، چهار چیز را فراموش نکن:۱. اخلاص، اخلاص، اخلاص، یعنی گفتن، انجام دادن و ندادن برای خدا۲. قلبت را از هر چیزی غیر او خالی کن و پر از محبت او و اهل‌بیت (ع) کن۳. نماز شب توشه عجیبی است۴. یاد دوستان شهید ولو با یک صلوات</string>
    <string name="star1">قاسم سلیمانی (۲۰ اسفند ۱۳۳۵ – ۱۳ دی ۱۳۹۸) فرمانده نیروی قدس سپاه پاسداران انقلاب اسلامی (IRGC) بود. او در طول جنگ ایران و عراق و پس از آن تا سال ۱۳۷۶، فرمانده لشکر ۴۱ ثارالله کرمان بود. سپس، از سال ۱۳۷۶ تا زمان مرگ به‌عنوان فرمانده در نیروی قدس سپاه پاسداران انقلاب اسلامی فعالیت می‌کرد. وی در ۱۳ دی ۱۳۹۸ در هنگام خروج از فرودگاه بین‌المللی بغداد در طی عملیاتی بنام عملیات آذرخش کبود به دستور دونالد ترامپ، رئیس‌جمهور ایالات متحده آمریکا، مورد حمله موشک پهپاد نظامی ارتش ایالات متحده قرار گرفته به قتل رسید. حاج قاسم سلیمانی طی جنگ ایران و عراق از فرماندهان عملیات‌های والفجر هشت، کربلای چهار و کربلای پنج بود و چندین بار مجروح شد. سپس، در مقام فرمانده نیروی قدس سپاه نقش مهمی در تقویت قدرت نظامی حزب‌الله لبنان و گروه‌های مسلح فلسطینی، جنگ افغانستان، تشکیل گروه‌های شبه‌نظامی در عراق پس از سرنگونی صدام حسین، سرکوب اعتراضات مردم سوری و تغییر روند جنگ داخلی سوریه به نفع بشار اسد، همچنین مقابله با داعش در عراق و سوریه داشته‌است. حاج سلیمانی لقب «سرباز صفر ولایت» را داشت. پس از قتل حاج قاسم سلیمانی، اجساد حاج قاسم سلیمانی، ابومهدی المهندس و سایر کشته‌شدگان عملیات آذرخش کبود در بغداد، کاظمین، کربلا و نجف تشییع شد و هزاران نفر از مردم عراق در این مراسم حضور یافتند. سپس اجساد به ایران منتقل شدند و به ترتیب در شهرهای اهواز، مشهد، تهران، قم و کرمان با حضور گسترده مردم تشییع شد، به طوری که در مراسم تشییع در تهران، جمعیت چند میلیونی از مردم گرد آمدند و برخی رسانه‌ها آن را شلوغ‌ترین مراسم تشییع پس از تشییع سید روح‌الله خمینی دانستند. سلیمانی در رسانه‌های بین‌المللی، به عنوان «فرماندهٔ سایه» توصیف می‌شد. از او به عنوان شخصیتی تأثیرگذار در نبرد علیه داعش نام برده می‌شود.</string>
    <string name="S">حاج قاسم سلیمانی در سال ۱۳۳۵ در روستای قنات ملک که روستایی کوهستانی با ساختاری طایفه‌ای (طایفه سلیمانی کرمانی )بود، واقع در شهرستان رابر، از توابع کرمان زاده شد او اصالتی لر داشت. نام پدرش حسن و نام مادرش فاطمه سلیمانی بود؛ یک خواهر و یک برادر بزرگتر و یک برادر کوچکتر داشت. او از ۱۲ سالگی روستای خود را برای کار در شهر کرمان ترک کرد. در نوجوانی به کار بنایی مشغول بود و در سال‌های ابتدای جوانی، از پیمانکاران سازمان آب کرمان به‌شمار می‌آمد. وی در سنین جوانی ازدواج کرد و دو فرزند پسر به نام‌های حسین و محمدرضا و دو فرزند دختر به نام‌های زینب و فاطمه داشت سلیمانی در سال‌های آخر زندگی در شهرک «شهید دقایقی» در محله شیان در کنار پارک جنگلی لویزان در تهران زندگی می‌کرد.</string>
    <string name="star3">با پایان یافتن جنگ ایران و عراق در ۱۳۶۷ ه‍. ش، لشکر ۴۱ ثارالله به فرماندهی حاج قلسم سلیمانی به کرمان بازگشت و درگیر جنگ با اشخاص مسلح و قاچاقچیان مواد مخدر شد، که از مرزهای شرقی کشور هدای می‌شدند. به گفتهٔ علی قاسمی، فرمانده سپاه انصار الرضا استان خراسان جنوبی، وی در برقراری امنیت در مرزهای شرقی از تایباد تا زابل و زاهدان کوشید. امنیت را در جاده بیرجند-قائن و بیرجند-زاهدان برقرار کرد. همچنین راه ارتباطی بیرجند به کرمان در کویر سوزان شهداد را از اشرار پاکسازی کرد</string>
    <string name="star4">قاسم سلیمانی در سال ۱۳۷۶، هم‌زمان با اوج‌گیری طالبان در افغانستان، به فرماندهی نیروی قدس سپاه پاسداران انقلاب اسلامی منصوب شد. وی تا پایان عمر در سال ۱۳۹۸ این سمت را عهده‌دار بود.</string>
    <string name="star5">در روز پنجشنبه ۳۰ شهریور ۱۳۹۶ حاج قاسم سلیمانی طی سخنرانی در مراسم چهلمین روز کشته شدن مرتضی حسین‌پور شلمانی با یادآوری پیامش به مناسبت کشته شدن محسن حججی و وعده انتقام در آن، بیان داشت که «کمتر از سه ماه دیگر اعلام پایان داعش و حکومت داعشی در این کره خاکی خواهد بود.» دو ماه بعد و در پایان آبان ۹۶ سلیمانی در پیامی به سید علی خامنه‌ای رهبر جمهوری اسلامی ایران با اشاره به «اتمام عملیات آزادسازی بو کمال» از پایان داعش خبر داد و آن را به عنوان یک «پیروزی بسیار بزرگ و سرنوشت‌ساز» به حضرت خامنه‌ای تبریک گفت. حاج قاسم سلیمانی در این پیام با «آمریکایی ـ صهیونیستی» خواندن داعش، خسارت‌های ناشی از عملیات این گروه در عراق و سوریه را ۵۰۰ میلیارد دلار برآورد کرد و «طراحی و اجرای» آن‌ها را به «رهبران و سازمان‌های مرتبط با آمریکا» نسبت داد. سید علی خامنه‌ای نیز با ارسال نامه‌ای به حاج قاسم سلیمانی ضمن تبریک به وی گفت که «شما با متلاشی ساختن توده سرطانی و مهلک داعش نه فقط به کشورهای منطقه و به جهان اسلام بلکه به همه ملت‌ها و به بشریت خدمتی بزرگ کردی» همچنین همزمان با پیام حاج قاسم سلیمانی به امام خامنه‌ای، حسن روحانی رئیس‌جمهور پایان داعش را به «رهبر جمهوری اسلامی، سپاه پاسداران، نیروی قدس و به‌ویژه حاج قاسم سلیمانی» تبریک گفت.</string>
    <string name="moon1">شیرین‌ترین خاطره‌ای که از شهید حاج قاسم سلیمانی به یاد دارم، این است که به من فرمودند که اگر می‌توانی، یک یا دو شب از شب‌های قدر را بیا و برای رزمندگان مدافع حرم در حرم حضرت رقیه (س)، مراسم احیاء را برگزار کن. من هم حسب‌ُالامر وی که به‌عنوان فرمانده بنده بود، چند سالی برای احیاء شب‌های قدر، به سوریه می‌رفتم. این خاطره‌ای که تعریف می‌کنم، به نظرم، آخرین دیدارم با شهید حاج قاسم سلیمانی بود</string>
    <string name="moon2">شب بیست و یکم یا بیست و سوم ماه مبارک رمضان، در حرم حضرت رقیه (س) که در حال خواندن دعا و روضه بودم، یکی از خادمان به نام آقای «میری» آمد و به من گفت که «پیرمرد آمده است»؛ («پیرمرد» اسم رمزی حاج‌قاسم بود). من تصورم این بود که حاج‌قاسم آمده و در جمعیت نشسته است؛ اما بعد از پایان مراسم که همه رفتند و خادمان درهای حرم را بستند، به اتاقی در طبقه بالای حرم رفتم که برای سحری آماده شوم، در آن‌جا آقای «میری» گفت که «حاج‌قاسم گفته است که بیا پایین». من هم خوشحال شدم و سریع دوباره به حرم برگشتم و از کنار ضریح رد شدم و به اتاق مسئول خدام رفتم. در آن‌جا با حاج‌قاسم، با آن تواضع و صفایی که داشت، احوال‌پرسی کردم تا این‌که گفت: «حاج صادق مراسم امشب به من نچسبید»، گفتم: «مگر در مجلس نبودید»، حاج قاسم گفت: «نه، در حقیقت نیامدم، همین جا نشسته بودم؛ اگر می‌شود، چند دقیقه در حد یک روضه هم که شده، بخوانید» بعداً فهمیدم که به‌دلیل مسائل امنیتی، نتوانسته بود به مجلس بیاید. دو نفری آمدیم بیرون و نشستیم کنار ضریح حضرت رقیه (س)، هیچ‌کس هم در حرم نبود، البته یک نفری هم داشت با موبایل فیلم گرفت که گویا شهید «پورجعفری» بود و آقای «میری» هم داشت سحری آماده می‌کرد. حاج‌قاسم نشست و سر خود را گذاشت روی ضریح و من هم به فاصله یک متری وی، شروع کردم به خواندن زیارت عاشورا، چون تا آن‌جا که می‌دانم و یادم هست، حاج قاسم همیشه بعد از نمازها، اصولا زیارت عاشورا را می‌خواند. با این‌که خسته بودم؛ اما بعد از زیارت عاشورا، دوباره قرآن به سر گرفتن را هم</string>
    <string name="moon3">اواخر سال ۵۶ برای گرفتن گواهی‌نامهٔ رانندگی به مرکز راهنمایی ‌و رانندگی کرمان مراجعه کردم. افسری بود به‌نام آذری‌نسب، گفت: «بیا تو. اتفاقاً گواهی‌نامه‌ات را خمینی امضا کرده، آماده است تحویل بگیری.» من از طعنهٔ او خیلی متوجه چیزی نشدم. مرا به داخل اطاقی هدایت کردند. دو نفر درجه‌دارِ دیگر هم وارد شدند و شروع به دادنِ فحش‌های رکیک کردند. من در محاصرهٔ آن‌ها قرار داشتم و هیچ راه گریزی نبود. با سیلی و لگد و ناسزای غیرقابل ‌بیان می‌گفتند: «تو شب‌ها می‌روی دیوارنویسی می‌کنی؟!» آن‌قدر مرا زدند که بی‌حال روی زمین افتادم. از بینی و صورتم خون جاری بود. یکی از آن‌ها با پوتین روی شکمم ایستاد و آن‌چنان ضربه‌ای به شکمم زد که احساس کردم همهٔ اَحشای درونم نابود شد. به‌رغم ورزشکاربودن و تمرینات سختی که در ورزشِ کاراته و زورخانه می‌کردم، توانم تمام [شد] و بیهوش شدم. وقتی به هوش آمدم، درب اطاق بسته بود و من محبوس در آن بودم. چون محلّ [ادارهٔ] آگاهی و راهنمایی‌رانندگی در یک مکان و در مقابل هتلی بود که در آن، سابق کار می‌کردم، آن‌ها مرا به‌نام شاگرد حاج‌محمد می‌شناختند. یکی از درجه‌دارها به حاج‌محمد و حاجی‌کارنما که لوازم‌یدکی‌فروشی داشت، خبر داد. از داخل اطاق صدای حاج‌محمد و حاجی‌کارنما را می‌شنیدم که به افسرِ آگاهی می‌گفتند: «این یک کارگر ساده و بدبخت است. اصلاً این چیزها را نمی‌داند!» و چند توهین هم به من کردند: «فرض کنید غلط کرده باشد و از روی نفهمی است!» با هر ترفندی بود، بعدِ نصف روز، قبل از اینکه مرا تحویل ساواک بدهند، از آگاهی خارج کردند. با بدنی کاملاً له‌شده دست‌هایم را گرفتند تا توانستم از خیابان عبور کنم. مرا به هتل نزد حاج‌محمد بردند. شربت آوردند. کمی حالم بهتر شد. حاج‌محمد مرا بوسید. مرا با کلمهٔ «پسرم» صدا کرد. خیلی درِگوشی به من گفت: «اگر بار دیگر گیرِ این‌ها بیفتی، به تو رحم نخواهند کرد.» سه روز از شدّت درد نمی‌توانستم تکان بخورم؛ اما انرژی جدیدی در خود احساس می‌کردم. ترس از کتک‌خوردن و شکنجه فروریخته بود. فکر می‌کردم هرچه باید بشود، شد! انگار این حادثه به‌نحوی در من اثر کرد که با هر ضربه و لگدی کلمهٔ «خمینی» در عمق وجود من هک می‌شد. مهم موضوع این است که وقتی من می‌خواندم، آن‌قدر حاج قاسم گریه می‌کرد و حال خوشی داشت که من به آن کسی که داشت فیلم می‌گرفت، (حالا خدا کند که فیلم آن وجود داشته باشد) یکی دوبار اشاره کردم که «ادامه بدهم؟»، گفت که «ادامه بده»، معلوم بود که به این حال حاج‌قاسم عادت داشت؛ خلاصه تا آخر دعا را خواندم و کمی صبر کردم تا از گریه‌هایش کمی کم شود، بعد از آن، آمد که تشکر کند؛ چون اصولا به مداح‌های اهل بیت (ع) بسیار احترام می‌گذاشت؛ آن‌شب با هم رفتیم به طبقه بالای حرم و سحری را با هم خوردیم. در این فاصله چندبار به من گفت که اگر شهید شدم، یادت باشد که برای من بخوانی. سردار فتاحی با بیان اینکه شهید سپهبد حاج قاسم سلیمانی خیلی عاشق شهادت بود گفت: زمانی که قطعنامه آتش بس پذیرفته شد من با حاج قاسم بودم و یادم است که ناراحت بود و می گفت، سفره شهادت را دارند جمع می کنند. وی اظهار داشت: اما خداوند وجود حاج قاسم سلیمانی را حفظ کرد تا در مقطعی دیگر خدمات ارزشمندی به جهان اسلام ارائه کند.</string>
    <string name="moon4">سردار فتاحی تاکید کرد: سپهبد شهید حاج قاسم سلیمانی در طول حیاتش برای خدا و مردم سنگ تمام گذاشت لذا خدا نیز برای او سنگ تمام گذاشت و مردم در شهادتش سوختند زیرا بی ادعا بود و عشق و علاقمند به نظام و ولایت بود. وی با بیان اینکه حاج قاسم خیلی مخلص بود افزود: زمانی که در جنوب شرق ماموریت داشتیم شب به یک پاسگاه ژاندارمری که روستا بود رفتیم و قرار بود صبح برای شناسایی حرکت کنیم. همرزم سردار سلیمانی گفت: آن شب به دلیل کمبود جا باید حدود ۱۴ نفر در یک اتاق می خوابیدیم در حالی که فقط یک تخت سربازی در اتاق بود. وی ادامه داد: من به گمان اینکه سردار حاج قاسم سلیمانی برای استراحت به اتاق دیگری می رود قبل از ورود بقیه روی تخت دراز کشیدم. سردار فتاحی گفت: زمانی حاج قاسم را در حال ورود به اتاق دیدم از جا بلند شدم اما حاج قاسم آمد داخل همان اتاق و از من خواست سر جایم دراز بکشم. وی اظهار داشت: من با اصرار خواستم ایشان به جای من روی تخت بخوابند اما خطاب به من گفت من فرمانده تو هستم و به تو امر می کنم همانجا بخوابی. وی گفت: آن شب حاج قاسم با وجود کمبود جا زیر تختی که من خوابیده بودم با سختی خوابید و به ما درس های بزرگی داد . </string>
</resources>