<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/memory"
    android:orientation="vertical"
    tools:context=".MemoryActivity">
    <ScrollView

        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:padding="16dp"
                android:orientation="vertical"
                tools:context=".MemoryActivity">


                <TextView
                    android:fontFamily="@font/hayat"
                    android:padding="16dp"
                    android:text="بسمعه ای تعالی "
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingTop="15dp"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:visibility="visible"
                    />

                <TextView
                    android:fontFamily="@font/calibri"
                    android:padding="16dp"
                    android:id="@+id/title_m1"
                    android:layout_gravity="center"
                    android:text="شیرین‌ترین خاطره...‌"
                    android:paddingTop="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:lineSpacingExtra="5dp"
                    android:fontFamily="@font/calibri"
                    android:padding="16dp"
                    android:id="@+id/txt_m1"
                    android:visibility="gone"
                    android:layout_gravity="center"
                    android:text="@string/moon1"
                    android:paddingTop="15dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:fontFamily="@font/calibri"
                    android:padding="16dp"
                    android:id="@+id/title_m2"
                    android:layout_gravity="center"
                    android:text="شب بیست و یکم یا بیست و سوم ماه مبارک رمضان..."
                    android:paddingTop="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:lineSpacingExtra="5dp"
                    android:fontFamily="@font/calibri"
                    android:id="@+id/txt_m2"
                    android:visibility="gone"
                    android:layout_gravity="center"
                    android:text="@string/moon2"
                    android:paddingTop="15dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:fontFamily="@font/calibri"
                    android:padding="16dp"
                    android:id="@+id/title_m3"
                    android:layout_gravity="center"
                    android:text="اواخر سال ۵۶... "
                    android:paddingTop="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:lineSpacingExtra="5dp"
                    android:fontFamily="@font/calibri"
                    android:id="@+id/txt_m3"
                    android:visibility="gone"
                    android:layout_gravity="center"
                    android:text="@string/moon3"
                    android:paddingTop="15dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:fontFamily="@font/calibri"
                    android:padding="16dp"
                    android:id="@+id/title_m4"
                    android:layout_gravity="center"
                    android:text="سردار فتاحی تاکید کرد..."
                    android:paddingTop="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:fontFamily="@font/calibri"
                    android:id="@+id/txt_m4"
                    android:visibility="gone"
                    android:layout_gravity="center"
                    android:text="@string/moon4"
                    android:paddingTop="15dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            </LinearLayout>
        </LinearLayout>

    </ScrollView>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"/>

</LinearLayout>