<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@drawable/lecture"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LectureActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:padding="8dp"
            android:orientation="vertical"
            tools:context=".LectureActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingTop="15dp"
                android:text="به نام حضرت حق"
                android:fontFamily="@font/hayat"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:visibility="visible" />

            <TextView
                android:text="ما ملت شهادتیم         ما ملت امام حسینیم"
                android:fontFamily="@font/calibri"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingTop="15dp"
                android:textSize="18sp"
                android:textColor="#290e00"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_gravity="center"
                android:text="***"
                android:gravity="center"
                android:paddingTop="10dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/part2"
                android:lineSpacingExtra="5dp"
                android:fontFamily="@font/calibri"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingTop="15dp"
                android:textSize="18sp"
                android:textColor="#290e00"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_gravity="center"
                android:text="***"
                android:gravity="center"
                android:paddingTop="10dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/Tramp"
                android:lineSpacingExtra="5dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingTop="15dp"
                android:textSize="18sp"
                android:fontFamily="@font/calibri"
                android:textColor="#290e00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_gravity="center"
                android:text="***"
                android:gravity="center"
                android:paddingTop="10dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/baradar_ali"
                android:lineSpacingExtra="5dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingTop="15dp"
                android:textSize="18sp"
                android:fontFamily="@font/calibri"
                android:textColor="#290e00"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_gravity="center"
                android:text="***"
                android:gravity="center"
                android:paddingTop="10dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="خدایا مرا به قافله ای که به سویت آمدند متصل کن."
                android:lineSpacingExtra="5dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingTop="15dp"
                android:textSize="18sp"
                android:fontFamily="@font/calibri"
                android:textColor="#290e00"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_gravity="center"
                android:text="***"
                android:gravity="center"
                android:paddingTop="10dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="خدایا سپاس گه مرا از اشک بر فرزندان فاطمه بهره مند نمودی!"
                android:lineSpacingExtra="5dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingTop="15dp"
                android:textSize="18sp"
                android:fontFamily="@font/calibri"
                android:textColor="#290e00"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_gravity="center"
                android:text="***"
                android:gravity="center"
                android:paddingTop="10dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="خدایا ثروت چشمانم گوهر اشک بر حسین فاطمه است."
                android:lineSpacingExtra="5dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingTop="15dp"
                android:textSize="18sp"
                android:fontFamily="@font/calibri"
                android:textColor="#290e00"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_gravity="center"
                android:text="***"
                android:gravity="center"
                android:paddingTop="10dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="ما باید فکرمان را،مغزمان را با خدا امیخته کنیم. فکرمان فقط جهاد باشد،فکر باید صد در صد جهاد باشد"
                android:lineSpacingExtra="5dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingTop="15dp"
                android:textSize="18sp"
                android:fontFamily="@font/calibri"
                android:textColor="#290e00"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_gravity="center"
                android:text="***"
                android:gravity="center"
                android:paddingTop="10dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="باید به این بلوغ برسیم که نباید دیده شویم آن کس که باید ببیند می بیند."
                android:lineSpacingExtra="5dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingTop="15dp"
                android:textSize="18sp"
                android:fontFamily="@font/calibri"
                android:textColor="#290e00"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>



        </LinearLayout>

    </ScrollView>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"/>

</LinearLayout>